cmd/pkg/ingestor/suite/testdata/flat-folder-structure/disallowedauthzprefix_constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: DisallowedAuthzPrefix
metadata:
  name: disallowed-authz-prefix-constraint
spec:
  enforcementAction: dryrun
  match:
    kinds:
      - apiGroups: ["security.istio.io"]
        kinds: ["AuthorizationPolicy"]
  parameters:
    disallowedprefixes: ["badprefix", "reallybadprefix"]
