cmd/pkg/ingestor/suite/testdata/flat-folder-structure/disallowedauthzprefix_template.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: disallowedauthzprefix
  annotations:
    description: >-
      Requires that principals and namespaces in Istio `AuthorizationPolicy`
      rules not have a prefix from a specified list.

      https://istio.io/latest/docs/reference/config/security/authorization-policy/
spec:
  crd:
    spec:
      names:
        kind: DisallowedAuthzPrefix
      validation:
        openAPIV3Schema:
          properties:
            disallowedprefixes:
              description: "Disallowed prefixes of principals and namespaces."
              items:
                type: string
              type: array
  targets:
    - rego: |
        package asm.guardrails.disallowedauthzprefix

        violation[{"msg": msg}] {
          p := input.review.object

          p.apiVersion == "security.istio.io/v1beta1"
          p.kind == "AuthorizationPolicy"

          rule := p.spec.rules[_]
          from := rule.from[_]

          principal := from.source.principals[_]
          parts := split(principal, "/")

          badprefix := input.parameters.disallowedprefixes[_]

          # check the final component of source.principals, the service account name
          startswith(parts[minus(count(parts), 1)], badprefix)

          msg := sprintf("source.principals '%v' cannot begin with '%v'", [principal, badprefix])
        }

        violation[{"msg": msg}] {
          p := input.review.object

          p.apiVersion == "security.istio.io/v1beta1"
          p.kind == "AuthorizationPolicy"

          rule := p.spec.rules[_]
          from := rule.from[_]

          namespace := from.source.namespaces[_]

          badprefix := input.parameters.disallowedprefixes[_]
          startswith(namespace, badprefix)

          msg := sprintf("source.namespaces '%v' cannot begin with '%v'", [namespace, badprefix])
        }
      target: admission.k8s.gatekeeper.sh
